logs/pyclist.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/booby'...
Listing './lib/python3.5/site-packages/booby-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/parinx'...
Listing './lib/python3.5/site-packages/parinx-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyclist'...
Compiling './lib/python3.5/site-packages/pyclist/model_helpers.py'...
***   File "./lib/python3.5/site-packages/pyclist/model_helpers.py", line 99
    print "No field of that name."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyclist/pyclist.py'...
***   File "./lib/python3.5/site-packages/pyclist/pyclist.py", line 313
    print output[0]
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyclist-0.2.7.egg-info'...
Listing './lib/python3.5/site-packages/restkit'...
Compiling './lib/python3.5/site-packages/restkit/client.py'...
***   File "./lib/python3.5/site-packages/restkit/client.py", line 346
    except socket.gaierror, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit/contrib'...
Compiling './lib/python3.5/site-packages/restkit/contrib/console.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/console.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/contrib/ipython_shell.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/ipython_shell.py", line 50
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restkit/datastructures.py'...
***   File "./lib/python3.5/site-packages/restkit/datastructures.py", line 162
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/errors.py'...
***   File "./lib/python3.5/site-packages/restkit/errors.py", line 32
    except (NameError, ValueError, KeyError), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/oauth2.py'...
***   File "./lib/python3.5/site-packages/restkit/oauth2.py", line 84
    except UnicodeDecodeError, le:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit-4.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socketpool'...
Listing './lib/python3.5/site-packages/socketpool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './restkit'...
Listing './share'...
Listing './share/python-wheels'...
Listing './socketpool'...
